# PoterSplit

./: blender_revolve.py  extractor.py  main.py  pyproject.toml  send_to_blender.py
