[project]
name = "PoterSplit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["opencv-python>=4.11.0.86", "numpy>=2.2.3", "svgwrite>=1.4.3", "matplotlib>=3.10.1", "pyside6>=6.8.2.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
